Do not use javax.bind in encrypt-service
We have a proper Base64 encoder/decoder in java.util, use that instead
of javax.xml.bind.DatatypeConverter. This allows us to ditch a dependency
on javax.xml.bind completely.

Change-Id: Ia6d8aec4cf37ea39b12b8a6c7e233b1f932587e4
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>